# masters

./: CMakeLists.txt  README.md  legacy_unused_archive.cpp.disabled
examples/: cascade_benchmark.cpp  exact_fs_diagnostics.cpp
include/: cascade_fir.h
src/: cascade_artifact.cpp  cascade_decompose.cpp  cascade_filter.cpp  decompose_exact_fs.cpp  direct_filter.cpp  freq_sampling_design.cpp  signal_generation.cpp
tests/: test_utils.h
tests/core/: cascade_artifact_test.cpp  cascade_decompose_test.cpp  cascade_fir_test.cpp  freq_sampling_design_test.cpp  signal_generation_test.cpp
tests/exact/: decompose_exact_fs_full_test.cpp  decompose_exact_fs_structured_test.cpp  decompose_exact_fs_test.cpp
